Self-Report Submission (SRS) (#1949)
* cwa-protocol-buffers/pull/57

* allow all kinds of submissionTypes on diagnosis_key

except: SUBMISSION_TYPE_HOST_WARNING

* new DB table: self_report_submissions

* TODO: implement SrsOtpVerifier

* introduce: "cwa-otp" header

either-or: cwa-otp | cwa-authorization

* let's be OS independent!

* ensure enough space for the submission_type

* ValidSubmissionTypeValidatorTest

* test diagnosisKeyService#recordSrs

* java17

* mitigate Log Injection

* more integration tests - especially for BAD_REQUEST

* fix spring-security issue

* use same version as on OTC

* revision=3.0.0

* SQL

* Java 17

* Java 17

* pacify hadolint

* remove xmlns

reduces external dependency risks

* prepare SRS daily limit and retention

* draft diagnosisKeyService SRS retention policy

* Mobile-App-Config setSelfReportParameters

* prepare maxSrsPerDay

* submissionServiceConfig MaxSrsPerDay

* pin sonar-maven-plugin version 3.9.1.2184

* new certs

* SrsVerifyClient

* actuator heath test incl. srs-verify

* use Collection in APIs; fix code smell: 'Stream.toList()'

* ensure SRS is not uploaded to EFGS/CHGS

* filter by 'srs-days: ${MAX_NUMBER_OF_DAYS_FOR_SRS:14}'

* set 'cwa-keys-truncated' header in case keys are older than 'srsDays'

* retention policy for 'self_report_submissions' table

srs-type-statistics-days: ${SRS_TYPE_STATISTICS_DAYS:400}

* better test readability

* lauch configs for eclipse

* switch to com.github.erosb:everit-json-schema:1.14.1

* switch to org.bouncycastle:bcpkix-jdk18on:1.72

* switch to org.junit.jupiter:junit-jupiter:5.9.1

* monitoring: add selfReports counter

* org.everit.json.schema.SchemaException: #: could not determine version

https://stackoverflow.com/questions/69666910/org-everit-json-schema-schemaexception-could-not-determine-version

* postgresql:11.5 everywhere

* STATISTICS_PANDEMIC_RADAR_BMG

* + :lang
